Fixing wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ margin-top:40px;
 }
 
 .paragraph {
-  width: 400px;
+  width: 800px;
   overflow-wrap: break-word;
 }
 
